fix(sbb-chip-group): improve spacing when no label was slotted (#4401)

--- a/src/elements/chip/chip-group/chip-group.scss
+++ b/src/elements/chip/chip-group/chip-group.scss
@@ -2,6 +2,8 @@
 
 :host {
   --sbb-chip-group-input-min-width: #{sbb.px-to-rem-build(150)};
+  --_sbb-chip-group-margin-block-start-default: #{sbb.px-to-rem-build(2)};
+  --_sbb-chip-group-margin-block-start-default-large: #{sbb.px-to-rem-build(3.5)};
 
   max-width: 100%; // Needed for the ellipsis on chips to work
 }
@@ -14,8 +16,63 @@
   }
 }
 
+:host(:state(without-label):state(size-s):not(:state(empty))) {
+  --sbb-chip-group-margin-block: 0 #{sbb.px-to-rem-build(7)};
+
+  @include sbb.mq($from: large) {
+    --sbb-chip-group-margin-block: 0 #{sbb.px-to-rem-build(5)};
+  }
+}
+
+:host(:is(:state(size-l), :state(size-m))) {
+  --sbb-chip-group-margin-block: var(--_sbb-chip-group-margin-block-start-default) var(0);
+
+  @include sbb.mq($from: large) {
+    --sbb-chip-group-margin-block: var(--_sbb-chip-group-margin-block-start-default-large) var(0);
+  }
+}
+
+:host(:state(without-label):state(size-m):not(:state(empty))) {
+  --sbb-chip-group-margin-block: #{sbb.px-to-rem-build(3)} #{sbb.px-to-rem-build(11)};
+
+  @include sbb.mq($from: large) {
+    --sbb-chip-group-margin-block: #{sbb.px-to-rem-build(3)} #{sbb.px-to-rem-build(14)};
+  }
+}
+
+:host(:not(:state(without-label)):state(size-m):not(:state(empty))) {
+  --sbb-chip-group-margin-block: var(--_sbb-chip-group-margin-block-start-default)
+    var(--_sbb-chip-group-margin-block-start-default-large);
+
+  @include sbb.mq($from: large) {
+    --sbb-chip-group-margin-block: var(--_sbb-chip-group-margin-block-start-default-large)
+      var(--_sbb-chip-group-margin-block-start-default-large);
+  }
+}
+
+:host(:state(without-label):state(size-l):not(:state(empty))) {
+  --sbb-chip-group-margin-block: var(--_sbb-chip-group-margin-block-start-default)
+    #{sbb.px-to-rem-build(16)};
+
+  @include sbb.mq($from: large) {
+    --sbb-chip-group-margin-block: var(--_sbb-chip-group-margin-block-start-default-large)
+      #{sbb.px-to-rem-build(20)};
+  }
+}
+
+:host(:not(:state(without-label)):state(size-l):not(:state(empty))) {
+  --sbb-chip-group-margin-block: var(--_sbb-chip-group-margin-block-start-default)
+    #{sbb.px-to-rem-build(7.5)};
+
+  @include sbb.mq($from: large) {
+    --sbb-chip-group-margin-block: var(--_sbb-chip-group-margin-block-start-default-large)
+      #{sbb.px-to-rem-build(7.5)};
+  }
+}
+
 ::slotted(input) {
   flex: 1 1 var(--sbb-chip-group-input-min-width);
+  max-height: #{sbb.px-to-rem-build(24)};
 }
 
 ::slotted(sbb-chip) {
